# django-authanon

./: .coveragerc  README.md  d_1669704f1a578156___init___py.html  d_1669704f1a578156_apps_py.html  d_1669704f1a578156_backends_py.html  index.html  pyproject.toml  status.json
.github/workflows/: coverage.yml  pipeline.yml
authanon/: __init__.py  apps.py  backends.py
authanon/management/commands/: authanon.py
tests/: models.py  test_backends.py  test_settings.py  urls.py  views.py
