[tool.poetry]
name = "django-authanon"
version = "0.1.0"
description = "Allows permissions for an anonymous user and a generic signed-in user to be set as groups."
authors = ["Robert Turnbull <robert.turnbull@unimelb.edu.au>"]
license = "Apache 2.0"
packages = [
    { include = "authanon" },
]

[tool.poetry.dependencies]
python = "^3.7.1"
Django = "^3.0"

[tool.poetry.dev-dependencies]
coverage = "^6.0.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
